--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -71,6 +71,11 @@
                   <string>亚略特</string>
                  </property>
                 </item>
+                <item>
+                 <property name="text">
+                  <string>文鼎创</string>
+                 </property>
+                </item>
                </widget>
               </item>
               <item>
